--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "문규의 성장일지"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "꾸준하게 기록 및 공유를 합니다."
-description              : ""
+name                     : "문규의 성장일지"
+description              : "꾸준하게 기록 및 공유를 합니다."
 url                      : "https://github.com/park-moonkyu"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
