--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "문규의 성장일지"
+  name             : "park-moonkyu"
   avatar           : "/assets/images/moon.jpg"
   bio              : "꾸준하게 기록 및 공유를 합니다."
   location         : "South Korea"
