카테고리 추가 및 태그 추가
카테고리 추가 및 태그 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "ABOUT ME"
     url: /about/
+  - title: "윤동주"
+    url: /categories/윤동주/
   # - title: "PROF"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
