--- a/_config.yml
+++ b/_config.yml
@@ -97,20 +97,35 @@ author:
   avatar           : "/assets/images/mk.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Cloud 와 AI 를 좋아합니다."
   location         : "South Korea"
-  email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: mailto:moonkyu95@gmail.com
-    - label: "LinkedIn"
-      icon: "fas fa-fw fa-link"
-      url: "https://www.linkedin.com/in/moonkyu-park/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/park-moonkyu"
-    - label: "Youtube"
-      icon: "fab fa-fw fa-youtude"
-      #url: "https://www.youtube.com/channel/UC5HfEyjM8r-GESaFfW7-DEA"
+  uri              :
+  home             : # null (default), "absolute or relative url to link to author home"
+  bitbucket        :
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : "park-moonkyu"
+  gitlab           :
+  google_plus      :
+  keybase          :
+  instagram        :
+  lastfm           :
+  linkedin         : "moonkyu-park" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  pinterest        :
+  soundcloud       :
+  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
+  steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
+  tumblr           :
+  twitter          :
+  vine             :
+  weibo            :
+  xing             :
+  youtube          : "https://www.youtube.com/channel/UC5HfEyjM8r-GESaFfW7-DEA"
 
 # Site Footer
 footer:
